# ai-helper

./: .gitignore  LICENSE  README.md  design.md
ai-helper/: CODE_STYLE.md  README.md  debug_pipeline.py  pyproject.toml
ai-helper/ai_helper/: __init__.py
ai-helper/ai_helper/api/: main.py
ai-helper/ai_helper/artifact/: __init__.py  local_repository.py  repository.py
ai-helper/ai_helper/config/: settings.py
ai-helper/ai_helper/core/: __init__.py  artifact_types.py  context.py  node.py  node_executor.py  pipeline.py
ai-helper/ai_helper/db/: models.py  session.py
ai-helper/ai_helper/node/: __init__.py  factory.py  registry.py
ai-helper/ai_helper/nodes/: __init__.py  frame_extract_node.py  video_input_node.py
ai-helper/ai_helper/pipeline/: __init__.py  models.py  repository.py
ai-helper/ai_helper/pipelines/: __init__.py  debug_pipeline.py  faceswap_pipeline.py
ai-helper/ai_helper/plugins/: faceswap_plugin.py  sample_plugin.py  voice_plugin.py
ai-helper/ai_helper/repository/: __init__.py  artifact_metadata.py  node_run.py  pipeline_run.py  pipeline_version.py
ai-helper/ai_helper/runtimes/: __init__.py
ai-helper/ai_helper/utils/: __init__.py  utils.py
ai-helper/tests/: conftest.py  test_additional.py  test_api.py  test_core.py  test_database.py
ai-helper/tests/context/: test_context.py
ai-helper/tests/executor/: test_node_executor.py
ai-helper/tests/fixtures/: dummy_nodes.py
ai-helper/tests/pipeline/: test_pipeline.py
ai-helper/tests/registry/: test_node_registry.py
ai-helper/tests/repository/: test_artifact_repository.py
(+69 files in other folders)
