[tool.poetry]
name = "ai-helper"
version = "0.1.0"
description = ""
authors = ["KiharaTakahiro <takahirokihara123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
httpx = "^0.24"
black = "^24.7b0"
ruff = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
